added the options in the new cor function
Allows you to now run z,t, or knha. Table will update correctly when you select t and will display t not z.

--- a/jamovi/metaanalysiscorr.a.yaml
+++ b/jamovi/metaanalysiscorr.a.yaml
@@ -84,9 +84,16 @@ options:
       default: NON
 
     - name: testType
-      title: Knapp and Hartung Adjustment
-      type: Bool
-      default: FALSE   
+      title: Tests and Confidence Intervals
+      type: List
+      options:
+        - name: "z"
+          title: z test
+        - name: "t"
+          title: t test
+        - name: "knha"
+          title: Knapp and Hartung Adjustment
+      default: z
       
     - name: level
       type: Number
