--- a/jamovi/metadichotomousmodel.a.yaml
+++ b/jamovi/metadichotomousmodel.a.yaml
@@ -141,7 +141,37 @@ options:
     - name: xAxisTitle
       title: x-axis title
       type: String
+      
+    - name: forestPlotSize
+      title: Forest plot size
+      type: List
+      options:
+        - name: "SMALL"
+          title: Small
+        - name: "MEDIUM"
+          title: Medium
+        - name: "LARGE"
+          title: Large
+        - name: "SMALLWIDE"
+          title: Small Wide
+        - name: "MEDIUMWIDE"
+          title: Medium Wide
+        - name: "LARGEWIDE"
+          title: Large Wide
+      default: SMALL
 
+    - name: funnelPlotSize
+      title: Funnel plot size
+      type: List
+      options:
+        - name: "SMALL"
+          title: Small
+        - name: "MEDIUM"
+          title: Medium
+        - name: "LARGE"
+          title: Large
+      default: SMALL
+      
     - name: pchForest
       title: Effect size points
       type: List
