--- a/jamovi/metadichotomousmodel.u.yaml
+++ b/jamovi/metadichotomousmodel.u.yaml
@@ -16,17 +16,17 @@ children:
             maxItemCount: 1
             isTarget: true
       - type: TargetLayoutBox
-        label: Total Sample Size for Experimental Group
-        children:
-          - type: VariablesListBox
-            name: n1i
-            maxItemCount: 1
-            isTarget: true
-      - type: TargetLayoutBox
         label: Number of Incidents in Control Group
         children:
           - type: VariablesListBox
             name: ci
+            maxItemCount: 1
+            isTarget: true
+      - type: TargetLayoutBox
+        label: Total Sample Size for Experimental Group
+        children:
+          - type: VariablesListBox
+            name: n1i
             maxItemCount: 1
             isTarget: true
       - type: TargetLayoutBox
@@ -143,3 +143,13 @@ children:
         children:
           - type: ComboBox
             name: fsntype
+  - type: LayoutBox
+    margin: large
+    children:
+      - type: ComboBox
+        name: forestPlotSize
+  - type: LayoutBox
+    margin: large
+    children:
+      - type: ComboBox
+        name: funnelPlotSize
