--- a/jamovi/metadv.a.yaml
+++ b/jamovi/metadv.a.yaml
@@ -78,6 +78,13 @@ options:
       max: 99.9
       default: 95
 
+    - name: step
+      type: Number
+      title: Step length of the Fisher algorithm
+      min: 0.0
+      max: 1.0
+      default: 0.5
+
     - name: showModelFit
       title: Display model fit
       type: Bool
